[package]
name = "ai-saved-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai-saved-manager"
path = "src/main.rs"

[lib]
name = "ai_saved_manager"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"

# HTTP / LLM
reqwest = { version = "0.12", features = ["json"] }
async-openai = "0.23"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
sha1 = "0.10"
uuid = { version = "1.8", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
hex = "0.4"

[dev-dependencies]
proptest = "1.4"
wiremock = "0.6"
tokio = { version = "1.37", features = ["full"] }
tempfile = "3.10"
